--- a/hero.css
+++ b/hero.css
@@ -1,16 +1,16 @@
 #hero-section {
     position: relative;
-    top: 0;
-    right: 0;
-    left: 0;
+    display: flex;
     margin: auto;
-    opacity: 0.85;
     width: 100vw;
     height: 50vh;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero-container-video {
     position: absolute;
+    opacity: 0.85;
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -27,9 +27,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+    height: 50%;
 }
 
 .hero-title {
