--- a/header.css
+++ b/header.css
@@ -1,17 +1,20 @@
 header {
     position: fixed;
     top: 0;
-    background-color: rgba(45, 176, 236, 0.65);
     width: 100%;
     height: auto;
     z-index: 100;
     border-bottom-left-radius: 80%;
     border-bottom-right-radius: 80%;
-    transition: background-color 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
+    box-shadow: inset 0px 10px 40px rgb(45, 175, 236, 0.85),
+    inset 0px -10px 40px rgb(45, 175, 236, 0.85);
+    transition: box-shadow 0.3s ease, background-color 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
 }
 
 header:hover {
-    background-color: rgb(45, 175, 236, 0.85);
+    box-shadow: inset 0px 25px 40px rgb(45, 175, 236, 1),
+    inset 0px -25px 40px rgb(45, 175, 236, 1),
+    0px 10px 40px rgb(45, 175, 236, 0.85);
 }
 
 .header-list {
@@ -22,6 +25,7 @@ header:hover {
     text-align: center;
     align-items: center;
     padding: 0;
+    
 }
 
 .header-list-item {
@@ -37,11 +41,11 @@ header:hover {
 }
 
 .header-list-item:hover {
-    scale: 1.2;
+    scale: 1.15;
 }
 
 .header-list-item a:hover {
-    color: rgb(248, 255, 57);
+    color: rgb(166, 238, 32);
 }
 
 /*Add and Remove by JavaScript*/
