--- a/hero.css
+++ b/hero.css
@@ -2,8 +2,8 @@
     position: relative;
     display: flex;
     margin: auto;
-    width: 100vw;
-    height: 50vh;
+    width: 100dvw;
+    height: 50dvh;
     justify-content: center;
     align-items: center;
 }
@@ -22,14 +22,41 @@
     object-fit: cover;
 }
 
-.hero-container-title {
+.hero-container-text {
     position: absolute;
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 50%;
+    transition: text-shadow 0.3s ease;
 }
 
-.hero-title {
+.hero-container-text:hover {
+    text-shadow: 0px 0px 50px rgba(50, 173, 235, 0.5);
+}
+
+.hero-text {
     margin: auto;
+    cursor: default;
+    background: linear-gradient(45deg, #0233d1 12.5%, #00f7ff 37.5%, #00ff4c 62.5%, #d9ff00 87.5%);
+    background-clip: text;
+    background-size: 200%;
+    background-position-x: 0%;
+    background-repeat: repeat;
+    color: transparent;
+    transition: background-position 0.5s ease;
+}
+
+.hero-text:hover {
+    background-position-x: 100%;
+}
+
+.hero-title{
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.hero-subtitle{
+    font-size: 2rem;
+    font-weight: 600;
 }
