--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ html {
     font-weight: normal;
     font-style: normal;
     font-size: larger;
+    cursor: default;
 }
 
 body {
@@ -21,8 +22,6 @@ main {
     justify-content: center;
     text-align: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
 }
 
 figure {
@@ -44,6 +43,7 @@ figure {
     margin-left: 10px;
     margin-right: 10px;
     font-weight: bold;
+    transition: scale 0.3s ease;
 }
 
 .link-list-item a {
@@ -51,28 +51,68 @@ figure {
     transition: color 0.3s ease;
 }
 
-.link-list-item a:hover {
-    color: rgb(248, 255, 57);
+.link-list-item:hover {
+    scale: 1.15;
 }
 
-.social-list {
+.link-list-item a:hover {
+    color: rgb(166, 238, 32);
+}
+
+.section-title {
+    margin: auto;
+    text-decoration: none; /* Quita el subrayado */
+    background: linear-gradient(45deg, #0233d1 12.5%, #00f7ff 37.5%, #00ff4c 62.5%, #d9ff00 87.5%);
+    background-clip: text;
+    background-size: 200%;
+    background-position-x: 0%;
+    background-repeat: repeat;
+    color: transparent;
+    transition: background-position 0.5s ease;
+}
+
+.section-title:hover {
+    background-position-x: 100%;
+}
+
+.info-section {
+    margin-left: 10dvw;
+    margin-right: 10dvw;
+}
+
+.section-container-text-special {
     display: flex;
     flex-direction: row;
-    list-style: none; /* Quita los puntos de la lista */
     justify-content: center;
-    text-align: center;
     align-items: center;
+
+}
+
+.section-container-list {
+    margin-left: 5dvw;
+    margin-right: 5dvw;
+}
+
+.section-text-list {
+    list-style: none; /* Quita los puntos de la lista */
     padding: 0;
 }
 
-.social-list-item {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-weight: bold;
-    text-decoration: none; /* Quita el subrayado */
-    transition: transform 0.2s ease;
+.section-container-list h3 {
+    color: blue;
 }
 
-.social-list-item:hover {
-    transform: scale(1.3);
+.text-list-item:hover strong{
+    background-position-x: 100%;
+}
+
+strong {
+    margin: auto;
+    background: linear-gradient(45deg, #000000 40%, #c6dc4c 100%);
+    background-clip: text;
+    background-size: 300%;
+    background-position-x: 0%;
+    background-repeat: repeat;
+    color: transparent;
+    transition: background-position 0.3s ease;
 }
