--- a/hero.css
+++ b/hero.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     margin: auto;
-    width: 100dvw;
+    width: 99dvw;
     height: 50dvh;
     justify-content: center;
     align-items: center;
@@ -52,11 +52,12 @@
 }
 
 .hero-title{
-    font-size: 3rem;
+    /*font-size: 4dvw;*/
+    font-size: calc(1rem + 3dvw);
     font-weight: 600;
 }
 
 .hero-subtitle{
-    font-size: 2rem;
+    font-size: calc(1rem + 2dvw);
     font-weight: 600;
 }
