Responsive for mobile: flex-wrap:wrap for ul elements. Changed hero and footer width to 100% instead of dvw cause dvw gets the verticall scrollbar too

--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -31,11 +31,13 @@ figure {
 
 .link-list {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     list-style: none; /* Quita los puntos de la lista */
     justify-content: center;
     text-align: center;
     align-items: center;
+    text-wrap: nowrap;
     padding: 0;
 }
 
