--- a/hero.css
+++ b/hero.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     margin: auto;
-    width: 99dvw;
+    width: 100%;
     height: 50dvh;
     justify-content: center;
     align-items: center;
