--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,7 @@
 footer {
     position: relative;
     display: flex;
-    width: 99dvw;
+    width: 100%;
     height: auto;
     flex-direction: column;
     justify-content: center;
