--- a/header.css
+++ b/header.css
@@ -20,12 +20,13 @@ header:hover {
 .header-list {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     list-style: none; /* Quita los puntos de la lista */
     justify-content: center;
     text-align: center;
     align-items: center;
     padding: 0;
-    
+    text-wrap: nowrap;
 }
 
 .header-list-item {
