--- a/gallery.css
+++ b/gallery.css
@@ -1,4 +1,4 @@
-#image-gallery {
+.image-gallery {
     position: relative;
     width: 50%;
     margin: auto;
@@ -51,11 +51,11 @@
     background-color: #005f5f9a;
 }
 
-#video-gallery {
+.video-gallery {
     width: 50%;
 }
 
-#video-gallery video{
+.video-gallery video{
     width: 100%;
     height: 100%;
     display: block;
