--- a/hero.css
+++ b/hero.css
@@ -1,4 +1,4 @@
-#hero-section {
+.hero-section {
     position: relative;
     display: flex;
     margin: auto;
@@ -6,6 +6,7 @@
     height: 50dvh;
     justify-content: center;
     align-items: center;
+    transition: height 0.5s ease;
 }
 
 .hero-container-video {
@@ -44,7 +45,7 @@
     background-position-x: 0%;
     background-repeat: repeat;
     color: transparent;
-    transition: background-position 0.5s ease;
+    transition: background-position 0.5s ease, font-size 0.5s ease;
 }
 
 .hero-text:hover {
@@ -52,7 +53,6 @@
 }
 
 .hero-title{
-    /*font-size: 4dvw;*/
     font-size: calc(1rem + 3dvw);
     font-weight: 600;
 }
