--- a/footer.css
+++ b/footer.css
@@ -12,23 +12,21 @@ footer {
 .social-list {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     list-style: none; /* Quita los puntos de la lista */
     justify-content: center;
     text-align: center;
     align-items: center;
+    align-content: stretch;
+    column-gap: 3%;
     padding: 0;
-    width: auto;
-    height: auto;
 }
 
 .social-list-item{
-    margin-left: 10px;
-    margin-right: 10px;
     box-sizing: border-box;
     text-decoration: none; /* Quita el subrayado */
-    transition: transform 0.2s ease;
-    width: 10%;
-    height: auto;
+    transition: transform 0.2s ease-in-out;
+    width: 8%;
 }
 
 .social-list-item:hover{
@@ -37,5 +35,4 @@ footer {
 
 .social-list-item img{
     width: 100%;
-    height: 100%;
 }
