--- a/header.css
+++ b/header.css
@@ -89,9 +89,8 @@ header.hidden {
     transform: translateY(-100%);
 }
 
-.header-nav.hidden {
-    opacity: 0;
-    transform: translateY(-100%);
+header.opaque {
+    background-color: rgb(45, 175, 236, 0.85);
 }
 
 .header-button.hidden {
