--- a/footer.css
+++ b/footer.css
@@ -1,12 +1,14 @@
 footer {
+    box-sizing: border-box;
     position: relative;
     display: flex;
     width: 100%;
-    height: auto;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
+    padding: 20px;
 }
 
 .social-list {
@@ -19,14 +21,15 @@ footer {
     align-items: center;
     align-content: stretch;
     column-gap: 3%;
-    padding: 0;
+    padding: 5px;
+    margin: 0;
 }
 
 .social-list-item{
-    box-sizing: border-box;
     text-decoration: none; /* Quita el subrayado */
     transition: transform 0.2s ease-in-out;
     width: 8%;
+    min-width: 70px;
 }
 
 .social-list-item:hover{
@@ -35,4 +38,14 @@ footer {
 
 .social-list-item img{
     width: 100%;
+}
+
+.license-container {
+    padding: 5px;
+    margin: 0;
+}
+
+.license-text {
+    padding:0;
+    margin: 0;
 }
