--- a/Projects/box-item.css
+++ b/Projects/box-item.css
@@ -7,6 +7,7 @@
     align-content: stretch;
     gap: 5dvh 5%;
     text-align: center;
+    list-style: none; /* Quita los puntos de la lista */
     padding: 0;
     margin: 0;
 }
