--- a/Projects/vignette.css
+++ b/Projects/vignette.css
@@ -1,18 +1,18 @@
-.box-list {
+.vignette-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: stretch;
     align-content: stretch;
-    gap: 5dvh 5%;
+    gap: 50px;
     text-align: center;
     list-style: none; /* Quita los puntos de la lista */
-    padding: 0;
+    padding: 10px;
     margin: 0;
 }
 
-.box-list-item {
+.vignette-list-item {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -26,19 +26,31 @@
     min-width: 300px;
 }
 
-.box-list-item div{
+.vignette-list-item div{
     display: inline-block;
-    width: 80%;
+    padding: 10px;
 }
 
-.box-list-item img {
+.vignette-item-title {
+    padding: 10px;
+}
+
+.vignette-item-paragraph {
+    padding: 10px;
+}
+
+.vignette-link {
+    display: flex;
+}
+
+.vignette-link-image {
     width: 100%;
     align-self: flex-end;
     border-bottom-left-radius: 2%;
     border-bottom-right-radius: 2%;
 }
 
-.box-list-item iframe {
+.vignette-list-item iframe {
     width: 100%;
     height: 250px;
     align-self: flex-end;
@@ -46,6 +58,6 @@
     border-bottom-right-radius: 2%;
 }
 
-.box-list-item iframe:fullscreen {
+.vignette-list-item iframe:fullscreen {
     border-radius: 0;
 }
