--- a/burger-button.css
+++ b/burger-button.css
@@ -7,8 +7,8 @@
     margin-top: 20px;
     margin-right: 20px;
     padding: 0;
-    z-index: 200;
-    opacity: 0.8;
+    z-index: 1000;
+    opacity: 0.6;
     transition: opacity 0.3s ease, transform 0.3s ease, scale 0.3s ease;
 }
 
@@ -25,7 +25,7 @@
 
 .line1, .line2, .line3 {
     transform-origin: 50% 25%;
-    stroke: blue;
+    stroke: black;
     stroke-width: 15;
     stroke-linecap: round;
     transition: stroke 0.5s ease, transform 0.5s ease, opacity 0.5s ease;
