--- a/header.css
+++ b/header.css
@@ -44,14 +44,14 @@ header.opaque {
     list-style: none; /* Quita los puntos de la lista */
     justify-content: center;
     text-align: center;
-    align-items: center;
-    padding: 0;
     text-wrap: nowrap;
+    align-items: center;
+    margin: 0;
+    padding: 10px;
+    gap: 20px;
 }
 
 .header-list-item {
-    margin-left: 10px;
-    margin-right: 10px;
     font-weight: bold;
     transition: scale 0.3s ease;
 }
