--- a/hero.css
+++ b/hero.css
@@ -1,4 +1,4 @@
-.hero-section {
+.hero-container {
     position: relative;
     display: flex;
     margin: auto;
@@ -27,8 +27,7 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 50%;
+    padding: 20px;
     transition: text-shadow 0.3s ease;
 }
 
@@ -37,7 +36,6 @@
 }
 
 .hero-text {
-    margin: auto;
     cursor: default;
     background: linear-gradient(45deg, #0233d1 12.5%, #00f7ff 37.5%, #00ff4c 62.5%, #d9ff00 87.5%);
     background-clip: text;
@@ -58,6 +56,6 @@
 }
 
 .hero-subtitle{
-    font-size: calc(1rem + 2dvw);
+    font-size: calc(1rem + 1.5dvw);
     font-weight: 600;
 }
