--- a/Icomoon/style.css
+++ b/Icomoon/style.css
@@ -1,13 +1,16 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('icomoon.woff?gpcz3y') format('woff');
+  src:
+    url('icomoon.ttf?r2xgwn') format('truetype'),
+    url('icomoon.woff?r2xgwn') format('woff'),
+    url('icomoon.svg?r2xgwn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
 [class^="icon-"]:after, [class*=" icon-"]:after {
-  /*speak: never;*/
+  speak: never;
   font-family: 'icomoon' !important; /* use !important to prevent issues with browser extensions that change fonts */
   font-variant: normal;
   text-transform: none;
@@ -18,6 +21,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrow:after {
+.icon-arrow-up:after {
   content: " \ea3b";
+}
+.icon-arrow-right:after {
+  content: " \ea3c";
+}
+.icon-arrow-left:after {
+  content: " \ea40";
 }
