--- a/Icomoon/style.css
+++ b/Icomoon/style.css
@@ -1,17 +1,19 @@
 @font-face {
   font-family: 'icomoon';
   src:
-    url('icomoon.ttf?r2xgwn') format('truetype'),
-    url('icomoon.woff?r2xgwn') format('woff'),
-    url('icomoon.svg?r2xgwn#icomoon') format('svg');
+    url('icomoon.ttf?md6cg5') format('truetype'),
+    url('icomoon.woff?md6cg5') format('woff'),
+    url('icomoon.svg?md6cg5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"]::after, [class*=" icon-"]::after {
+[class^="icon-"]::after, [class*=" icon-"]::after, [class^="icon-"]::before, [class*=" icon-"]::before {
   /*speak: never;*/
   font-family: 'icomoon' !important; /* use !important to prevent issues with browser extensions that change fonts */
+  font-style: normal;
+  font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
@@ -21,6 +23,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-spinner::before {
+  content: "\e982  ";
+  background: radial-gradient(rgba(199,199,29,1) 50%, rgba(12,236,90,1) 100%);
+  background-clip: text;
+  color: transparent;
+}
+.icon-spinner::after {
+  content: " \e982";
+  background: radial-gradient(rgba(199,199,29,1) 50%, rgba(12,236,90,1) 100%);
+  background-clip: text;
+  color: transparent;
+}
+.icon-confused::before {
+  content: "\e9f5 ";
+  background: radial-gradient(rgb(29, 196, 199) 50%, rgb(12, 143, 236) 100%);
+  background-clip: text;
+  color: transparent;
+}
 .icon-arrow-up::after {
   content: " \ea3b";
 }
