--- a/codepen.css
+++ b/codepen.css
@@ -12,7 +12,6 @@
 }
 
 .cp_embed_iframe {
+    width: 100%;
     height: 100%;
-    border-bottom-left-radius: 2%;
-    border-bottom-right-radius: 2%;
 }
