--- a/common.css
+++ b/common.css
@@ -55,6 +55,10 @@ a {
     text-decoration: none; /* Quita el subrayado */
 }
 
+img {
+    max-width: 100%;
+}
+
 h1,h2,h3,h4,h5,h6,p {
     margin: 0;
     padding: 0;
