--- a/grid.css
+++ b/grid.css
@@ -1,46 +1,47 @@
 .grid-list {
-    display: inline-block;
+    display: grid;
+    
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
 }
 
 .grid-list-item {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    justify-items: stretch;
+    align-items: stretch;
 }
 
-.grid-list-item:nth-child(even) .grid-list-img{
-    order: -1;
+.grid-list-item:nth-child(even) img {
+    grid-column: 1;
+    grid-row: 1;
 }
 
-.grid-list-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 3%;
-}
-
-.grid-list-text > h3 {
-    font-size: xx-large;
+.grid-list-item h3 {
+    font-size: 2rem;
     text-transform: uppercase;
     margin: 0;
     padding: 3%;
 }
 
-.grid-list-text > ul {
+.grid-list-item h4 {
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 3%;
+    color: blue;
+}
+
+.grid-list-item ul {
     text-align: left;
     margin: 0;
     padding: 3%;
 }
 
-.grid-list-img {
-    display: flex;
-}
-
-.grid-list-img > img {
+.grid-list-item img {
     width: 100%;
+    object-fit: cover;
 }
