--- a/footer.css
+++ b/footer.css
@@ -1,51 +1,22 @@
-footer {
-    box-sizing: border-box;
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    padding: 20px;
-}
-
 .social-list {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    list-style: none; /* Quita los puntos de la lista */
     justify-content: center;
-    text-align: center;
     align-items: center;
-    align-content: stretch;
     column-gap: 3%;
     padding: 5px;
-    margin: 0;
 }
 
-.social-list-item{
-    text-decoration: none; /* Quita el subrayado */
+.social-list > li {
+    width: clamp(75px, 10%, 300px);
     transition: transform 0.2s ease-in-out;
-    width: 8%;
-    min-width: 70px;
 }
 
-.social-list-item:hover{
+.social-list > li:hover{
     transform: translateY(-10%);
 }
 
-.social-list-item img{
-    width: 100%;
-}
-
 .license-container {
+    text-align: center;
     padding: 5px;
-    margin: 0;
-}
-
-.license-text {
-    padding:0;
-    margin: 0;
 }
