--- a/hero.css
+++ b/hero.css
@@ -1,7 +1,6 @@
 .hero-container {
     position: relative;
     display: flex;
-    margin: auto;
     width: 100%;
     height: 50dvh;
     justify-content: center;
@@ -42,6 +41,7 @@
     background-size: 200%;
     background-position-x: 0%;
     background-repeat: repeat;
+    text-align: center;
     color: transparent;
     transition: background-position 0.5s ease, font-size 0.5s ease;
 }
@@ -51,11 +51,11 @@
 }
 
 .hero-title{
-    font-size: calc(1rem + 3dvw);
+    font-size: calc(1.5rem + 2dvw);
     font-weight: 600;
 }
 
 .hero-subtitle{
-    font-size: calc(1rem + 1.5dvw);
+    font-size: calc(1.3rem + 1dvw);
     font-weight: 600;
 }
