--- a/vignette.css
+++ b/vignette.css
@@ -1,13 +1,33 @@
+.vignette {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.vignette-title > a {
+    background: linear-gradient(45deg, #0233d1 12.5%, #00f7ff 37.5%, #00ff4c 62.5%, #d9ff00 87.5%);
+    background-clip: text;
+    background-size: 200%;
+    background-position-x: 0%;
+    background-repeat: repeat;
+    color: transparent;
+    font-size: 2rem;
+    margin: 10px 0;
+    padding: 10px;
+    transition: background-position 0.5s ease;
+}
+
+.vignette-title > a:hover, .vignette-title > a:focus {
+    background-position-x: 100%;
+}
+
 .vignette-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: stretch;
-    align-content: stretch;
-    gap: 50px;
+    gap: clamp(10px, 10dvw, 50px);
     text-align: center;
-    list-style: none; /* Quita los puntos de la lista */
     padding: 10px;
     margin: 0;
 }
@@ -15,12 +35,9 @@
 .vignette-list-item {
     overflow: hidden;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: stretch;
-    align-content: stretch;
-    text-align: center;
+    justify-content: space-between;
     box-shadow: inset 0px 0px 40px rgb(45, 175, 236, 0.85);
     border-radius: 10px;
     width: 30%;
@@ -28,13 +45,11 @@
 }
 
 .vignette-item-text {
-    display: inline-block;
-    width: 100%;
     padding: 10px;
 }
 
 .vignette-item-text > h3 {
-    font-size: x-large;
+    font-size: 1.4rem;
     padding: 10px;
 }
 
@@ -44,25 +59,23 @@
 
 .vignette-item-content {
     display: flex;
-    align-self: flex-end;
-    width: 100%;
+    align-items: center;
     height: 250px;
 }
 
 .vignette-item-content > p {
-    align-self: center;
-    width: 100%;
     padding: 20px;
     color: rgb(96, 105, 110);
 }
 
 .vignette-item-content > a {
-    display: flex;
     width: 100%;
+    height: 100%;
 }
 
 .vignette-item-content > a > img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
