--- a/burger-button.css
+++ b/burger-button.css
@@ -3,12 +3,12 @@
     top: 0;
     right: 0;
     cursor: pointer;
-    height: 10%;
-    margin-top: 20px;
-    margin-right: 20px;
+    width: 70px;
+    margin-top: 10px;
+    margin-right: 10px;
     padding: 0;
     z-index: 1000;
-    opacity: 0.6;
+    opacity: 1;
     transition: opacity 0.3s ease, transform 0.3s ease, scale 0.3s ease;
 }
 
@@ -25,7 +25,7 @@
 
 .line1, .line2, .line3 {
     transform-origin: 50% 25%;
-    stroke: black;
+    stroke: rgb(0, 0, 0);
     stroke-width: 15;
     stroke-linecap: round;
     transition: stroke 0.5s ease, transform 0.5s ease, opacity 0.5s ease;
