--- a/vignette.css
+++ b/vignette.css
@@ -7,10 +7,12 @@
     position: sticky;
     top: 0;
     left: 0;
-    padding: 0px clamp(5px, 5%, 150px);
-    width: fit-content;
-    clip-path: polygon(0 0, 100% 0, 85% 100%, 0 100%);
-    background-color: black;
+    width: 100%;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    text-align: center;
+    min-width: fit-content;
+    background-color: rgb(175, 226, 255);
+    transition: width 0.3s ease, clip-path 0.3s ease, background 0.3s ease;
 }
 
 .vignette-title > a {
@@ -21,6 +23,7 @@
     background-repeat: repeat;
     color: transparent;
     font-size: 2rem;
+    padding: 0px clamp(25px, 5%, 150px);
     transition: background-position 0.5s ease;
 }
 
@@ -33,10 +36,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: clamp(10px, 10dvw, 50px);
+    gap: clamp(10px, 3dvw, 100px);
     text-align: center;
-    padding: 10px;
-    margin: 0;
+    padding: 40px clamp(10px, 7.5%, 50px);
 }
 
 .vignette-list-item {
@@ -47,7 +49,7 @@
     justify-content: space-between;
     box-shadow: inset 0px 0px 40px rgb(45, 175, 236, 0.85);
     border-radius: 10px;
-    width: 30%;
+    width: 28%;
     min-width: 300px;
 }
 
@@ -58,12 +60,13 @@
 .vignette-item-text > h3 {
     margin: 0 auto;
     width: fit-content;
+    text-transform: uppercase;
     font-size: 1.4rem;
     padding: 10px;
 }
 
 .vignette-item-text > p {
-    padding: 10px;
+    padding: 10px 7.5%;
 }
 
 .vignette-item-content {
@@ -90,4 +93,11 @@
 
 .vignette-item-content > iframe:fullscreen {
     border-radius: 0;
+}
+
+/*Add and Remove by JavaScript*/
+.vignette .collapse {
+    width: 0%; /* Esto sirve para que la transición con width funcione */
+    clip-path: polygon(0 0, 100% 0, calc(100% - 30px) 100%, 0 100%);
+    background-color: rgb(0, 0, 0);
 }
