--- a/intro.css
+++ b/intro.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    gap: 20px;
 }
 
 .intro-list-item {
@@ -11,6 +12,7 @@
     grid-template-columns: repeat(auto-fit, minmax(calc(215px + 25%), 1fr)); /* 215 + (width * 0.25) */
     justify-items: stretch;
     align-items: stretch;
+    column-gap: 20px;
 }
 
 .intro-list-item:nth-child(even) img {
@@ -33,41 +35,16 @@
 }
 
 .intro-list-item ul {
-    text-align: left;
     padding: 3%;
 }
 
 .intro-list-item img {
     width: 100%;
     object-fit: cover;
+    border-radius: 20px;
 }
 
-.intro-list-item-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-}
-
-.intro-list-item-wrap > div {
-    text-align: center;
-}
-
-.intro-list-item-wrap > div > h3 {
-    color: rgb(0, 132, 255);
-}
-
-.intro-list-item-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.intro-list-item-list > li {
-    text-align: center;
-}
-
-.intro-list-item-list > li > strong {
+.intro-list-item strong {
     background: linear-gradient(45deg, #000000 40%, #c6dc4c 100%);
     background-clip: text;
     background-size: 300%;
@@ -77,6 +54,32 @@
     transition: background-position 0.3s ease;
 }
 
-.intro-list-item-list > li:hover strong {
+.intro-list-item strong:hover {
     background-position-x: 100%;
+}
+
+.intro-list-item-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.intro-list-item-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+}
+
+.intro-list-item-wrap ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.intro-list-item-wrap > div > h3 {
+    color: rgb(0, 132, 255);
 }
