--- a/burger-button.css
+++ b/burger-button.css
@@ -25,7 +25,7 @@
 
 .line1, .line2, .line3 {
     transform-origin: 50% 25%;
-    stroke: rgb(0, 0, 0);
+    stroke: black;
     stroke-width: 15;
     stroke-linecap: round;
     transition: stroke 0.5s ease, transform 0.5s ease, opacity 0.5s ease;
