cambios responsive, descarga de imágenes y arreglos generales creado entorno docker para CI/CD

--- a/frontend/assets/css/common.css
+++ b/frontend/assets/css/common.css
@@ -146,6 +146,7 @@ h4 a {
 /*REUSABLE*/
 .h2-mask {
     position: sticky;
+    z-index: 3;
     top: 0;
     width: 100%;
     min-width: max-content; /*necesario para que la máscara se ajuste al contenido */
