--- a/frontend/assets/css/header.css
+++ b/frontend/assets/css/header.css
@@ -1,15 +1,11 @@
 header {
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 5;
     display: flex;
-    flex-wrap: nowrap;
     width: 100%;
     justify-content: center;
-    text-align: center;
-    align-items: center;
-    text-wrap: nowrap;
-    transition: background-color 0.3s ease, opacity 0.3s ease, transform 0.3s ease, backdrop-filter 0.3s ease-in-out;
+    transition: opacity 0.3s ease, transform 0.3s ease, backdrop-filter 0.3s ease;
 }
 
 /*Add and Remove by JavaScript*/
@@ -23,10 +19,6 @@ header.opaque {
     backdrop-filter: blur(30px);
 }
 
-.header-nav {
-    transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
 .header-list {
     display: flex;
     flex-wrap: wrap;
@@ -34,8 +26,12 @@ header.opaque {
     text-align: center;
     text-wrap: nowrap;
     align-items: center;
-    padding: 10px;
-    gap: 15px;
+    padding: 20px;
+    gap: 10px;
+}
+
+.header-list > li {
+    flex: 0.5 1 30%;
 }
 
 .header-list > li > a {
