--- a/frontend/assets/css/vignette.css
+++ b/frontend/assets/css/vignette.css
@@ -6,14 +6,14 @@
 }
 
 .vignette-list-item {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     background-color: white;
     border-radius: 1rem;
-    min-height: 200px;
 }
 
 .vignette-item-content {
+    flex: 1 1 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -64,6 +64,7 @@
 }
 
 .vignette-item-media {
+    flex: 1 1 max(450px, 50%); /*En 50% se aplica flex-grow, en 450px se aplica el flex-shrink*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,7 +86,7 @@
 }
 
 .vignette-item-media > a > img {
-    /*aspect-ratio: 21 / 9;*/
+    aspect-ratio: 21 / 9;
     object-fit: cover;
 }
 
